--- a/cssindex.html
+++ b/cssindex.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+        <img class="top-cloud" src="cloud.png" alt="cloud-image">
         <h1><em>I'm Akash.</em></h1>
         <h2>A <span class="pro">Pro</span>grammer.</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-        <img  src="images/mountain.png" alt="mountain-image">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+        <img  src="mountain.png" alt="mountain-image">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img class="Ak" src="C:\Users\akash\Desktop\My Program\Web development\CSS-MySite\320954444_410295361262414_3059035370531091933_n-modified.png" alt="Akash Khalekar Image">
+            <img class="Ak" src="320954444_410295361262414_3059035370531091933_n-modified.png" alt="Akash Khalekar Image">
             <h2>Hello.</h2>
             <p class="intro">I am an IOS and Web Developer. I'm the founder and CTO of The App Brewery. I ❤️ coffee and brew my own beers.</p>
           </div>
@@ -27,12 +27,12 @@
           <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="code-image" src="C:\Users\akash\Desktop\My Program\Web development\CSS-MySite\images\computer.png" alt="skiil images">
+              <img class="code-image" src="computer.png" alt="skiil images">
               <h3>Design & Development</h3>
               <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
             </div>
             <div class="skill-row">
-              <img class="chilly-image" src="C:\Users\akash\Desktop\My Program\Web development\CSS-MySite\images\chillies.png" alt="skiil images">
+              <img class="chilly-image" src="chillies.png" alt="skiil images">
               <h3>Hot Wing challenges</h3>
                 <p>But my best skill is eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Peapers are my favourite snacks.</p>
             </div>
