--- a/cssindex.html
+++ b/cssindex.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="fonts.googleapis.com">
+<link rel="preconnect" href="fonts.gstatic.com" crossorigin>
 <link href="style.css" rel="stylesheet">
     <title>Akash Khalekar</title>
 </head>
